Incresed font size and nav improvements
Increaded font size from 14px to 15px.

Changed the navigation breakpoint so that the mobile(burger) menu now take over sooner.

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,3 +1,5 @@
+@import helpers
+    
 // Colors
 $primary: #e45844
 $light: #e5e6ea
@@ -7,7 +9,6 @@ $darkest: #1C3C57
 // Fonts
 $heading-font: 'Abril Fatface', cursive
 $main-font: 'Roboto', "Helvetica Neue", Arial, sans-serif
-// $heading-font: 'Vollkorn', serif
 
 // Variables
 $max-width: 1080px
