--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,41 +1,8 @@
+@import variables
 @import helpers
-    
-// Colors
-$primary: #e45844
-$light: #e5e6ea
-$dark: #456172
-$darkest: #1C3C57
+@import "~/node_modules/hamburgers/_sass/hamburgers/hamburgers.scss"
 
-// Fonts
-$heading-font: 'Abril Fatface', cursive
-$main-font: 'Roboto', "Helvetica Neue", Arial, sans-serif
-
-// Variables
-$max-width: 1080px
-
-// Breakpoints    
-$mobile-width: 481px
-$tablet-width: 768px
-$laptop-width: 1025px
-$desktop-width: 1281px
-$ultra-wide-width: 1800px 
-
-@mixin mobile
-  @media (min-width: #{$mobile-width}) 
-      @content
-
-@mixin tablet
-  @media (min-width: #{$tablet-width}) 
-      @content
-
-@mixin laptop
-  @media (min-width: #{$laptop-width}) 
-      @content
-
-@mixin desktop
-  @media (min-width: #{$desktop-width}) 
-      @content
-
-@mixin ultra-wide
-  @media (min-width: #{$ultra-wide-width}) 
-      @content
+body 
+    font-family: $main-font
+    background-color: $light
+    color: #2e414d
