--- a/assets/sass/_helpers.sass
+++ b/assets/sass/_helpers.sass
@@ -1,7 +1,9 @@
 .first-letter
-    font-size: 3.2rem
+    font-size: 3.5rem
     initial-letter: 2
     float: left
-    margin-top: -.3rem
-    padding: 1rem .6rem 0 0
-    font-family: 'Abril Fatface', cursive
+    margin-top: -.5rem
+    margin-left: -.5rem
+    padding: 1rem .5rem 0 0
+    font-family: $heading-font
+    font-weight: 700
