--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -19,22 +19,22 @@ $laptop-width: 1025px
 $desktop-width: 1281px
 $ultra-wide-width: 1800px 
 
-@mixin mobile
+=mobile
   @media (min-width: #{$mobile-width}) 
       @content
 
-@mixin tablet
+=tablet
   @media (min-width: #{$tablet-width}) 
       @content
 
-@mixin laptop
+=laptop
   @media (min-width: #{$laptop-width}) 
       @content
 
-@mixin desktop
+=desktop
   @media (min-width: #{$desktop-width}) 
       @content
 
-@mixin ultra-wide
+=ultra-wide
   @media (min-width: #{$ultra-wide-width}) 
       @content
