Major update. FAQ
Added FAQ page.
Added a new footer component along with google maps.
More sass variables (colors)
Updated some styles.
Made the main conent stretch to the full with of container insted of 70%

--- a/assets/sass/_helpers.sass
+++ b/assets/sass/_helpers.sass
@@ -7,3 +7,9 @@
     padding: 1rem .5rem 0 0
     font-family: $heading-font
     font-weight: 700
+
+.text-underline
+    border-bottom: 2px solid $yellow
+    display: inline-block
+    padding-bottom: 5px
+    margin-bottom: 5px
