--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -7,3 +7,9 @@ body
     font-family: $main-font
     background-color: $light
     color: #2e414d
+
+h1,
+h2,
+h3,
+h4
+    font-family: $heading-font
