--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -4,10 +4,14 @@ $light: #e5e6ea
 $dark: #456172
 $darkest: #1C3C57
 $white: #f5f5f5
+$yellow: #D59567
+
+// Shadows
+$shadow: 0 15px 30px rgba(76, 112, 132, 0.1)
 
 // Fonts
 $heading-font: 'Playfair Display', serif
-$main-font: 'Roboto', "Helvetica Neue", Arial, sans-serif
+$main-font: 'Source Sans Pro', sans-serif
 
 // Variables
 $max-width: 1080px
