--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -11,16 +11,16 @@ $shadow: 0 15px 30px rgba(76, 112, 132, 0.1)
 
 // Fonts
 $heading-font: 'Playfair Display', serif
-$main-font: 'Source Sans Pro', sans-serif
+$main-font: 'Source Sans Pro', 'system-ui', 'BlinkMacSystemFont', '-apple-system', 'Roboto', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
 
 // Variables
 $max-width: 1080px
 
 // Breakpoints    
-$mobile-width: 481px
+$mobile-width: 576px
 $tablet-width: 768px
-$laptop-width: 1025px
-$desktop-width: 1281px
+$laptop-width: 992px
+$desktop-width: 1200px
 $ultra-wide-width: 1800px 
 
 =mobile
