Change index page to make it one column and started to make it responsive

--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -11,7 +11,7 @@ $shadow: 0 15px 30px rgba(76, 112, 132, 0.1)
 
 // Fonts
 $heading-font: 'Playfair Display', serif
-$main-font: 'Source Sans Pro', 'system-ui', 'BlinkMacSystemFont', '-apple-system', 'Roboto', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
+$main-font: 'Source Sans Pro', sans-serif
 
 // Variables
 $max-width: 1080px
