Big style update. Change all the colors and textures. Changed some of the main images. Removed some unused styles.

--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -1,13 +1,16 @@
 // Colors
 $primary: #e45844
-$light: #e5e6ea
-$dark: #456172
+$light: #f0f4f5
+$dark: #242F3D
 $darkest: #1C3C57
 $white: #f5f5f5
 $yellow: #D59567
 
 // Shadows
-$shadow: 0 15px 30px rgba(76, 112, 132, 0.1)
+$shadow: 0 30px 40px -10px rgba(127, 106, 85, .25)
+
+//Border
+$border: 6px solid lighten($light, 5%)
 
 // Fonts
 $heading-font: 'Playfair Display', serif
