--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -5,7 +5,7 @@
 
 body 
     font-family: $main-font
-    background-color: $light
+    background: $light url('~/assets/images/concrete-texture.png')
     color: #2e414d
 
 h1,
