--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -7,7 +7,7 @@ $white: #f5f5f5
 $yellow: #D59567
 
 // Shadows
-$shadow: 0 30px 40px -10px rgba(127, 106, 85, .25)
+$shadow: 0 30px 50px -10px RGBA(23, 38, 58, .25)
 
 //Border
 $border: 6px solid lighten($light, 5%)
