Added more SVG's and removed more unused css

--- a/assets/sass/_helpers.sass
+++ b/assets/sass/_helpers.sass
@@ -10,6 +10,5 @@
 
 .text-underline
     border-bottom: 2px solid $yellow
+    padding-bottom: 1rem
     display: inline-block
-    padding-bottom: 5px
-    margin-bottom: 5px
