Changed heading font

--- a/assets/sass/_helpers.sass
+++ b/assets/sass/_helpers.sass
@@ -1,14 +1,23 @@
 .first-letter
-    font-size: 3.5rem
+    font-size: 3rem
     initial-letter: 2
     float: left
-    margin-top: -.5rem
-    margin-left: -.5rem
-    padding: 1rem .5rem 0 0
+    margin-top: -.4rem
+    margin-left: -.4rem
+    padding: 1.25rem .4rem 0 0
     font-family: $heading-font
-    font-weight: 700
+    font-weight: 400
 
 .text-underline
     border-bottom: 2px solid $yellow
     padding-bottom: 1rem
     display: inline-block
+
+.image--style
+    border: $border
+    box-shadow: 0 45px 50px -25px RGBA(23, 38, 58, .25)
+
+.title
+    font-family: $heading-font
+    font-size: 1.5rem
+    font-weight: 700
