--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -7,13 +7,13 @@ $white: #f5f5f5
 $yellow: #D59567
 
 // Shadows
-$shadow: 0 30px 50px -10px RGBA(23, 38, 58, .25)
+$shadow: 0 50px 50px -30px RGBA(23, 38, 58, .15)
 
 //Border
 $border: 6px solid lighten($light, 5%)
 
 // Fonts
-$heading-font: 'Playfair Display', serif
+$heading-font: 'Libre Baskerville', serif
 $main-font: 'Source Sans Pro', sans-serif
 
 // Variables
