Added a dark-gradient class

--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -2,9 +2,12 @@
 $primary: #e45844
 $light: #f0f4f5
 $dark: #242F3D
-$darkest: #1C3C57
+$darkest: #17263A
 $white: #f5f5f5
 $yellow: #D59567
+
+//Gradients
+$dark-gradient: $dark linear-gradient(to bottom, rgba(36,47,60,1) 0%, rgba(56,75,102,.2) 100%)
 
 // Shadows
 $shadow: 0 50px 50px -30px RGBA(23, 38, 58, .15)
