--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -16,7 +16,7 @@ $shadow: 0 50px 50px -30px RGBA(23, 38, 58, .15)
 $border: 6px solid lighten($light, 5%)
 
 // Fonts
-$heading-font: 'Libre Baskerville', serif
+$heading-font: 'Libre Baskerville', 'Lucida Bright', 'Lucidabright', 'Lucida Serif', 'Lucida', 'DejaVu Serif', 'Bitstream Vera Serif', 'Liberation Serif', 'Georgia', serif
 $main-font: 'Source Sans Pro', sans-serif
 
 // Variables
