--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -17,7 +17,7 @@ $border: 6px solid lighten($light, 5%)
 
 // Fonts
 $heading-font: 'Libre Baskerville', 'Lucida Bright', 'Lucidabright', 'Lucida Serif', 'Lucida', 'DejaVu Serif', 'Bitstream Vera Serif', 'Liberation Serif', 'Georgia', serif
-// $main-font: 'Source Sans Pro', sans-serif
+$main-font: 'Source Sans Pro', sans-serif
 
 // Variables
 $max-width: 1080px
