--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -4,7 +4,7 @@
 @import "~/node_modules/hamburgers/_sass/hamburgers/hamburgers.scss"
 
 body 
-    // font-family: $main-font
+    font-family: $main-font
     background: $light url('~assets/images/concrete-texture.png')
     color: #2e414d
 
