Made extra large images fit better. Changed index to welcome text

--- a/assets/sass/_helpers.sass
+++ b/assets/sass/_helpers.sass
@@ -9,8 +9,8 @@
     font-weight: 400
 
 .text-underline
-    border-bottom: 2px solid $yellow
-    padding-bottom: 1rem
+    border-bottom: 2.5px solid $yellow
+    padding-bottom: .8rem
     display: inline-block
 
 .image--style
