--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -5,7 +5,7 @@
 
 body 
     font-family: $main-font
-    background: $light url('/concrete-texture.png')
+    background: $light url('~assets/images/concrete-bg.jpg')
     color: #2e414d
 
 h1,
